java11+ deprecation fixes